--- a/wordpress/wp-content/themes/Marmishlag/style.css
+++ b/wordpress/wp-content/themes/Marmishlag/style.css
@@ -20,14 +20,105 @@ Text Domain: twentythirteen
     justify-content: space-between;
 }
 
+/* CSS BTN */
 .buttonOne {
-    padding: 4%;
-    border: yellow 2px solid;
-    color: yellow;
+
+    border: #FACE23 2px solid;
+    color: #FACE23;
     background-color: white;
+    cursor: pointer;
+    width: 108px;
+    height: 40px;
 }
 
 .buttonTwo {
-    
+    border: #FACE23 2px solid;
+    color: white;
+    background-color: #FACE23;
+    cursor: pointer;
+    width: 108px;
+    height: 40px;
 }
 
+/* CSS SEARCHBAR */
+
+.wrapper {
+    position: relative;
+    display: flex;
+    min-width: 100px;
+}
+  
+.search {
+border: 1px solid grey;
+border-radius: 5px;
+width: 100%;
+height: 25px;
+padding: 2px 23px 2px 30px;
+outline: 0;
+background-color: #f5f5f5;
+
+/* @media(max-width: 1250px) {
+    width: 800px; 
+} */
+}
+
+.search-icon {
+position: absolute;
+top: 8px;
+left: 8px;
+width: 14px;
+}
+
+.clear-icon {
+position: absolute;
+top: 9px;
+right: 8px;
+width: 12px;
+cursor: pointer;
+visibility: hidden;
+}
+  
+.search:hover, .search:focus {
+    border: 1px solid #FACE23;
+    background-color: white;
+}
+
+/* CSS CATEGORY */
+
+ul {
+    justify-content: space-between;
+    list-style-type: none;
+    display: flex;
+    align-items: center;
+}
+
+/* CSS POST RECETTE */
+
+.idearecette {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-gap: 10px;
+}
+.lignerecette {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+/* CSS RECETTE */
+
+.imagerecette {
+    width: 278px;
+    height: 224px;
+    z-index: 0;
+}
+.namerecette {
+    width: 278px;
+    height: 42px;
+    left: 8px;
+    z-index: 1;
+    top: 496px;
+    background: #FACE23;
+    color: white;
+    border-radius: 8px;
+}
